Fixed several text formatting issues on chat windows. We now use word-breaks so that extra long words don't cause a horizontal scroll bar to be displayed. Pre-formatted/multi-line text is now displayed inside its own box, with local scroll bars if needed. Closes #85.
git-svn-id: svn://svn.softwarelivre.sapo.pt/sapo_msg_mac/trunk@142 30d2cb3b-9f40-45d5-ba16-273292637043

--- a/lilypad/Resources/ChatView/ChatView.css
+++ b/lilypad/Resources/ChatView/ChatView.css
@@ -82,8 +82,12 @@ body
 
 .textWithLinebreaks
 {
+	border: 1px solid #DDD;
+	padding: 4px;
 	white-space: pre;
 	font: 11px 'Courier', Monaco, monospace;
+	word-wrap: normal;
+	overflow: auto;
 }
 
 
@@ -132,11 +136,13 @@ body
 
 .memessage
 {
+	clear: both;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	padding: 4px 16px;
 	color: #000000;
 	line-height: 150%;
+	word-wrap: break-word;
 }
 
 
@@ -171,11 +177,13 @@ body
 
 .metoomessage
 {
+	clear: both;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	padding: 4px 16px;
 	color: #000000;
 	line-height: 150%;
+	word-wrap: break-word;
 }
 
 
@@ -224,11 +232,13 @@ body
 
 .youmessage
 {
+	clear: both;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	padding: 4px 16px;
 	color: #000000;
 	line-height: 150%;
+	word-wrap: break-word;
 }
 
 
@@ -263,9 +273,11 @@ body
 
 .youtoomessage
 {
+	clear: both;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	padding: 4px 16px;
 	color: #000000;
 	line-height: 150%;
+	word-wrap: break-word;
 }
